# 2526-DI-034-DI4D-Portal

./: .gitignore  README.md  docker-compose.testing.yml
code/: .dockerignore  .env.template  .env_template  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
code/DI4D_Portal/: manage.py
code/DI4D_Portal/DI4D_Portal/: asgi.py  jinja2.py  settings.py  urls.py  wsgi.py
code/DI4D_Portal/DI4D_app/: admin.py  apps.py  middleware.py  models.py  oidc_claims.py  oidc_userinfo.py  signals.py  views.py
code/DI4D_Portal/DI4D_app/migrations/: 0001_initial.py  0002_news_picture.py  0002_user_is_alumni.py  0003_alter_user_profilepicture.py  0004_techtalk_date.py  0005_alter_applicationsetting_enddate_and_more.py  0006_question_content_alter_formanswer_userid.py  0007_news_content_alter_news_mediapath_alter_news_picture.py
code/DI4D_Portal/jinja_templates/: home.jinja  test.jinja
code/DI4D_Portal/jinja_templates/admin/: edit_news.jinja  export.jinja  users.jinja
code/DI4D_Portal/jinja_templates/auth/: forgot_password.jinja  login.jinja  reset_complete.jinja  reset_password.jinja  reset_send.jinja
code/DI4D_Portal/jinja_templates/components/: file_list_preview_htmx.jinja  news_htmx.jinja  student_registration_form.jinja  student_registration_form_htmx.jinja  techtalk_detail_htmx.jinja  techtalks_htmx.jinja  user_htmx.jinja
code/DI4D_Portal/static/: style.css
code/DI4D_Portal/theme/: apps.py
code/helm/di4d/: Chart.yaml  values.yaml
code/keycloak/: .gitignore  Dockerfile  realm-export.json.template  tmp_mapper_username.json
documents/client/: README.md
(+38 files in other folders)
